Bug 108531 - Continue making XSSAuditor thread safe: Remove dependencies on m_parser from init()
Summary: Continue making XSSAuditor thread safe: Remove dependencies on m_parser from ...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tony Gentilcore
URL:
Keywords:
Depends on:
Blocks: 106127 107603
  Show dependency treegraph
 
Reported: 2013-01-31 14:41 PST by Tony Gentilcore
Modified: 2013-02-01 13:45 PST (History)
4 users (show)

See Also:


Attachments
Patch (6.83 KB, patch)
2013-01-31 14:42 PST, Tony Gentilcore
no flags Details | Formatted Diff | Diff
Patch for landing (6.93 KB, patch)
2013-02-01 09:52 PST, Tony Gentilcore
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Tony Gentilcore 2013-01-31 14:41:36 PST
Continue making XSSAuditor thread safe: Remove dependencies on m_parser from init()
Comment 1 Tony Gentilcore 2013-01-31 14:42:47 PST
Created attachment 185870 [details]
Patch
Comment 2 Tony Gentilcore 2013-02-01 09:52:23 PST
Created attachment 186068 [details]
Patch for landing
Comment 3 WebKit Review Bot 2013-02-01 10:41:54 PST
Comment on attachment 186068 [details]
Patch for landing

Clearing flags on attachment: 186068

Committed r141605: <http://trac.webkit.org/changeset/141605>
Comment 4 WebKit Review Bot 2013-02-01 10:41:57 PST
All reviewed patches have been landed.  Closing bug.
Comment 5 Jessie Berlin 2013-02-01 12:42:44 PST
sputnik/Unicode/Unicode_510/S7.6_A1.1_T1 started failing on the ML Release WK testers between 141604 and 141606

http://build.webkit.org/builders/Apple%20MountainLion%20Release%20WK1%20%28Tests%29/builds/6402
http://build.webkit.org/results/Apple%20MountainLion%20Release%20WK1%20(Tests)/r141606%20(6403)/sputnik/Unicode/Unicode_510/S7.6_A1.1_T1-pretty-diff.html

--- /Volumes/Data/slave/mountainlion-release-tests-wk1/build/layout-test-results/sputnik/Unicode/Unicode_510/S7.6_A1.1_T1-expected.txt
+++ /Volumes/Data/slave/mountainlion-release-tests-wk1/build/layout-test-results/sputnik/Unicode/Unicode_510/S7.6_A1.1_T1-actual.txt
@@ -1,6 +1,7 @@
+CONSOLE MESSAGE: line 77: SyntaxError: Invalid character '\u0029'
 S7.6_A1.1_T1
 
-PASS 
+FAIL successfullyParsed is not set
 
 TEST COMPLETE
 
Of all the changes, http://trac.webkit.org/changeset/141605 looks most suspect.
Comment 6 Tony Gentilcore 2013-02-01 13:45:14 PST
> Of all the changes, http://trac.webkit.org/changeset/141605 looks most suspect.

The test failure doesn't repro for me locally on the mac or chromium ports. And the failure went away on the bots as of here:
http://build.webkit.org/builders/Apple%20MountainLion%20Release%20WK1%20%28Tests%29/builds/6408

So I guess this was a flake?