Continue making XSSAuditor thread safe: Remove dependencies on m_parser from init() https://bugs.webkit.org/show_bug.cgi?id=108531

Reviewed by Adam Barth.

The threaded HTML parser will create and init() the XSSAuditor on the main thread, but filterToken() will be called on the background.

No new tests because no change in functionality.

* html/parser/HTMLDocumentParser.cpp:
(WebCore::HTMLDocumentParser::pumpTokenizer):
* html/parser/XSSAuditor.cpp:
(WebCore::XSSAuditor::XSSAuditor):
(WebCore::XSSAuditor::init):
(WebCore::XSSAuditor::filterToken):
* html/parser/XSSAuditor.h:
(WebCore):
(XSSAuditor):


Canonical link: https://commits.webkit.org/126868@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141605 268f45cc-cd09-0410-ab3c-d52691b4dbfc